Add a way for event call sites to handle exceptions gracefully, add a whole bunch of extra logging and error handling to RecipesEventJS